--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -21,26 +21,38 @@
 </head>
 <body class="no-select">
   <header>
-    <h1>Cyber Clash</h1>
+    <h1 class="typewriter glow-text">
+      <span>C</span>
+      <span>Y</span>
+      <span>B</span>
+      <span>E</span>
+      <span>R</span>
+      <span> </span>
+      <span>C</span>
+      <span>L</span>
+      <span>A</span>
+      <span>S</span>
+      <span>H</span>
+    </h1>
   </header>
   <main class="f-col">
     <div id="waitingMessage" class="center">
         <p>Waiting for the admin to start...</p>
     </div>
     <section id="playerLobby" class="player-lobby f-col center"  style="display:none;">
-        <div class="picture-chooser flex center">
+        <div class="picture-chooser tech-inset glow-border flex center">
           <div class="left-arrow pointer hover">
-            <i class="fa-solid fa-arrow-left"></i>
+            <img src="../img/arrow-left.png">
           </div>
           <div class="circle">
             <img class="avatar" src="../img/user-solid.svg">
           </div>
           <div class="right-arrow pointer hover">
-            <i class="fa-solid fa-arrow-right"></i>
+            <img src="../img/arrow-right.png">
           </div>
         </div>
       <input id="playerName" placeholder="Enter your name" class="name-entry">
-      <button class="select-name pointer hover">Enter</button>
+      <button class="select-name btn-3d">Enter</button>
     </section>
   </main>
 </body>
