--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -22,15 +22,28 @@
 </head>
 <body class="no-select">
   <header>
-    <h1>Cyber Clash</h1>
+    <h1 class="typewriter glow-text">
+      <span>C</span>
+      <span>Y</span>
+      <span>B</span>
+      <span>E</span>
+      <span>R</span>
+      <span> </span>
+      <span>C</span>
+      <span>L</span>
+      <span>A</span>
+      <span>S</span>
+      <span>H</span>
+    </h1>
   </header>
-  <main class="f-col">
-    <!--  Lobby will hold placeholders for participants when game is not running. As users join it will update the chosen
-          avatar and user name. Once three users have joined (or at least one) the admin can start the game. 
-          I think we should leave the game control only on the admin frontend.          
-    -->
-    <section class="lobby f-col">
-      <div class="flex sp-even">
+
+  <main class="flex one center">
+    <section class="f-col center one">
+      <h3 class="glow-text">Current Question:</h3>
+      <div class="question-wrapper flex">
+        <p id="question-text">Waiting for the question...</p>
+      </div>
+      <div class="lobby tech-inset glow-border flex sp-even">
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
           <div class="circle">
@@ -54,19 +67,10 @@
         </div>
       </div>
     </section>
-    <section class="question-display-viewing f-col">
-      <h3>Current Question:</h3>
-      <div class="question-wrapper flex">
-        <p id="question-text">Waiting for the question...</p>
-      </div>
-    <section class="score-display">
-      <h3 class="score-trigger pointer hover">
-        High Scores
-      </h3>
-      <div class="high-scores" id="leaderboard">
+    <section class="f-col center one">
+      <div class="tech-inset glow-border high-scores f-col" id="leaderboard">
       </div>
     </section>
-    <button class="view">View Questions</button>
   </main>
 </body>
 </html>
